Wait for BeforeInstallPromptEvent.userChoice() to be resolved before GC'ing object.

Bug: 729902
Change-Id: I7813e944c4e43daea908243899a59339115367a7
Reviewed-on: https://chromium-review.googlesource.com/525575
Reviewed-by: Tsuyoshi Horo <horo@chromium.org>
Reviewed-by: Kentaro Hara <haraken@chromium.org>
Commit-Queue: Mounir Lamouri <mlamouri@chromium.org>
Cr-Commit-Position: refs/heads/master@{#477590}