third_party/WebKit/Source/modules/app_banner/BeforeInstallPromptEvent.h
@@ -6,14 +6,16 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #ifndef BeforeInstallPromptEvent_h
 #define BeforeInstallPromptEvent_h
 
+#include <utility>
 #include "bindings/core/v8/ScriptPromise.h"
 #include "bindings/core/v8/ScriptPromiseProperty.h"
+#include "core/dom/ContextLifecycleObserver.h"
 #include "core/frame/LocalFrame.h"
 #include "modules/EventModules.h"
 #include "modules/app_banner/AppBannerPromptResult.h"
 #include "mojo/public/cpp/bindings/binding.h"
+#include "platform/bindings/ActiveScriptWrappable.h"
 #include "public/platform/modules/app_banner/app_banner.mojom-blink.h"
-#include <utility>
 
 namespace blink {
 
@@ -25,10 +27,14 @@ using UserChoiceProperty =
                           Member<AppBannerPromptResult>,
                           ToV8UndefinedGenerator>;
 
-class BeforeInstallPromptEvent final : public Event,
-                                       public mojom::blink::AppBannerEvent {
+class BeforeInstallPromptEvent final
+    : public Event,
+      public mojom::blink::AppBannerEvent,
+      public ActiveScriptWrappable<BeforeInstallPromptEvent>,
+      public ContextClient {
   DEFINE_WRAPPERTYPEINFO();
   USING_PRE_FINALIZER(BeforeInstallPromptEvent, Dispose);
+  USING_GARBAGE_COLLECTED_MIXIN(BeforeInstallPromptEvent);
 
  public:
   ~BeforeInstallPromptEvent() override;
@@ -44,9 +50,10 @@ class BeforeInstallPromptEvent final : public Event,
   }
 
   static BeforeInstallPromptEvent* Create(
+      ExecutionContext* execution_context,
       const AtomicString& name,
       const BeforeInstallPromptEventInit& init) {
-    return new BeforeInstallPromptEvent(name, init);
+    return new BeforeInstallPromptEvent(execution_context, name, init);
   }
 
   void Dispose();
@@ -58,6 +65,9 @@ class BeforeInstallPromptEvent final : public Event,
   const AtomicString& InterfaceName() const override;
   void preventDefault() override;
 
+  // ScriptWrappable
+  bool HasPendingActivity() const override;
+
   DECLARE_VIRTUAL_TRACE();
 
  private:
@@ -66,7 +76,8 @@ class BeforeInstallPromptEvent final : public Event,
                            mojom::blink::AppBannerServicePtr,
                            mojom::blink::AppBannerEventRequest,
                            const Vector<String>& platforms);
-  BeforeInstallPromptEvent(const AtomicString& name,
+  BeforeInstallPromptEvent(ExecutionContext*,
+                           const AtomicString& name,
                            const BeforeInstallPromptEventInit&);
 
   // mojom::blink::AppBannerEvent methods:
